-
Type:
Bug
-
Status: Closed
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.1
-
Component/s: C# - Compiler
-
Labels:None
Generated C# code for a union type does WriteStructEnd but doesn't WriteStructBegin. The reader does ReadStructBegin. This does not manifest itself in the binary protocol because it writes nothing for either struct begin or end, but will likely manifest for other protocols.