THRIFT-1955 Union Type writer generated in C# does not WriteStructBegin

Patch: Carl Yeksigian